--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -86,3 +86,37 @@ $colors: (
 
 @import "roboto";
 @import "noto-sans";
+
+
+// REMOVE SCROLLBAR
+::-webkit-scrollbar,
+*::-webkit-scrollbar {
+    display: none;
+}
+
+div::-webkit-scrollbar {
+    border: none;
+    width: 0;
+    background: rgba(0, 0, 0, 0);
+}
+
+div::-webkit-scrollbar-track {
+    border: none;
+    width: 0;
+    background: rgba(0, 0, 0, 0);
+}
+
+div::-webkit-scrollbar-thumb {
+    border: none;
+    width: 0;
+    background: rgba(0, 0, 0, 0);
+}
+
+ion-app.md ion-content.content .scroll-content {
+    padding: 0;
+}
+
+button.button-wrapper{
+    border: 0;
+    background-color: unset;
+}
