--- a/src/components/current-track-footer/current-track-footer.html
+++ b/src/components/current-track-footer/current-track-footer.html
@@ -2,14 +2,25 @@
     <ion-toolbar>
         <ion-card>
             <ion-card-content>
+                <div class="thumbnail-wrapper">
+                    <img [src]="track?.albumThumbnail">
+                </div>
                 <div class="track-info-wrapper">
                     <p>{{ track?.artist.name }}</p>
                     <p>{{ track?.title }}</p>
                 </div>
-                <button class="media-wrapper button-wrapper" (click)="tooglePlay()">
-                    <ion-icon *ngIf="!playing" name="play"></ion-icon>
-                    <ion-icon *ngIf="playing" name="pause"></ion-icon>
-                </button>
+                <div class="media-wrapper">
+                    <button class="media-button button-wrapper" (click)="previousTrack()">
+                        <ion-icon name="skip-backward"></ion-icon>
+                    </button>
+                    <button class="media-button button-wrapper" (click)="tooglePlay()">
+                        <ion-icon *ngIf="!playing" name="play"></ion-icon>
+                        <ion-icon *ngIf="playing" name="pause"></ion-icon>
+                    </button>
+                    <button class="media-button button-wrapper" (click)="nextTrack()">
+                        <ion-icon name="skip-forward"></ion-icon>
+                    </button>
+                </div>
             </ion-card-content>
         </ion-card>
     </ion-toolbar>
