--- a/src/components/current-track-footer/current-track-footer.scss
+++ b/src/components/current-track-footer/current-track-footer.scss
@@ -12,41 +12,55 @@ current-track-footer {
     ion-footer {
         height: $TRACK_FOOTER_HEIGHT;
         transition: visibility 0s, opacity 0.3s linear;
-        ion-card.card-md{
+        box-shadow: 0 -4px 2px rgba(#000, 0.2);
+        ion-toolbar.toolbar-md{
+            padding: 0;
+        }
+        ion-card.card-md {
             margin: 0;
             width: 100%;
         }
         ion-card-content.card-content-md {
             display: flex;
+            flex-direction: column;
             padding: 0;
-            div.thumbnail-wrapper{
-                margin: 2px 10px 2px 2px;
-                height: 68px;
-                min-width: 68px;
-                width: 68px;
-                img{
-                    height: 100%;
-                    width: auto;
-                    box-shadow: 0 0 3px rgba(#000, 0.3);
+            div.track-info {
+                display: flex;
+                div.thumbnail-wrapper {
+                    margin: 2px 10px 2px 2px;
+                    height: 68px;
+                    min-width: 68px;
+                    width: 68px;
+                    img {
+                        height: 100%;
+                        width: auto;
+                        box-shadow: 0 0 3px rgba(#000, 0.3);
+                    }
+                }
+                div.track-info-wrapper {
+                    width: calc(100% - 190px);
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-evenly;
+                }
+                div.media-wrapper {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    min-width: 120px;
+                    padding-right: 25px;
+                    .media-button {
+                        padding: 0;
+                    }
+                    ion-icon {
+                        font-size: 2em;
+                    }
                 }
             }
-            div.track-info-wrapper{
-                width: calc(100% - 190px);
-                display: flex;
-                flex-direction: column;
-                justify-content: space-evenly;
-            }
-            div.media-wrapper{
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                min-width: 110px;
-                padding-right: 10px;
-                .media-button {
-                    padding: 0;
-                }
-                ion-icon{
-                    font-size: 2em;
+            div.track-duration {
+                box-shadow: 0 -1px 2px rgba(#000, 0.2);
+                ion-range.range-md {
+                    padding: 0px 25px;
                 }
             }
         }
