--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -4,6 +4,8 @@ page-home {
         display: flex;
         justify-content: center;
         align-items: center;
+        box-shadow: 0 4px 2px rgba(0, 0, 0, 0.2);
+        padding-bottom: 10px;
         button.play-all-button{
             background-color: unset;
             padding: 10px;
