--- a/src/components/current-track-footer/current-track-footer.scss
+++ b/src/components/current-track-footer/current-track-footer.scss
@@ -59,8 +59,14 @@ current-track-footer {
             }
             div.track-duration {
                 box-shadow: 0 -1px 2px rgba(#000, 0.2);
+                display: flex;
+                align-items: center;
                 ion-range.range-md {
                     padding: 0px 25px;
+                    width: 100%;
+                }
+                div.timer-wrapper{
+                    padding-right: 25px;
                 }
             }
         }
