--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,20 +1,27 @@
 page-home {
-    div.play-all{
+    div.track-option {
         width: 100%;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         box-shadow: 0 4px 2px rgba(0, 0, 0, 0.2);
-        padding-bottom: 10px;
-        button.play-all-button{
-            background-color: unset;
-            padding: 10px;
-            width: 50%;
-            margin-top: 15px;
-            font-weight: bold;
-            box-shadow: 0 0 5px rgba(#000, 0.3);
+        padding-bottom: 5px;
+        div.button-wrapper {
             display: flex;
             justify-content: space-evenly;
+            align-items: center;
+            width: 100%;
+            padding: 8px;
+            button {
+                background-color: unset;
+                padding: 10px;
+                width: 40%;
+                font-weight: bold;
+                box-shadow: 0 0 5px rgba(#000, 0.3);
+                display: flex;
+                justify-content: space-evenly;
+            }
         }
     }
 }
