--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -24,4 +24,11 @@ page-home {
             }
         }
     }
+    ion-list.track-list{
+        margin: 10px 5px;
+        div.track-card-wrapper{
+            width: 100%;
+            padding: 5px;
+        }
+    }
 }
