trying to implement MusicControl plugin

--- a/src/components/track-card/track-card.html
+++ b/src/components/track-card/track-card.html
@@ -1,8 +1,8 @@
 <ion-card>
     <ion-card-content>
         <div class="thumbnail-wrapper">
-            <ion-img class="thumbnail" [src]="track.albumThumbnail"></ion-img>
-            <!-- <img [src]="sanitize(track.albumThumbnail)"> -->
+            <!-- <ion-img class="thumbnail" [src]="track.albumThumbnail"></ion-img> -->
+            <img class="thumbnail" [src]="sanitize(track.albumThumbnail)">
         </div>
         <div class="info">
             <div class="info-wrapper">
